# cozo-hs

./: CHANGELOG.md  README.md  cabal.project  cozo-hs.cabal
example/: Main.hs  main.hs
hello/: main.hs
rawrepl/: Main.hs
src/: MyLib.hs
src/Database/: Cozo.hs
src/Database/Cozo/: FromRelation.hs  Internal.hs
src/Database/Cozo/Internal/: Bindings.hs  Data.hs
test/: Main.hs
