cabal-version:      3.4
name:               cozo-hs
version:            0.1.0.0
synopsis:           Haskell bindings to the CozoDB C API
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Monawa Sensei
maintainer:         monawasensei@gmail.com
-- copyright:
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: headers/cozo_c.h

common warnings
    ghc-options: -Wall

executable example
    import: warnings
    build-depends:
        base ^>= 4.18.0.0
        ,cozo-hs
        ,bytestring
    hs-source-dirs: example
    main-is: main.hs
    default-language: GHC2021

library
    import:           warnings
    exposed-modules:  Database.Cozo
    other-modules:
        Database.Cozo.Internal.Bindings
        Database.Cozo.Internal.Data
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
    extra-libraries: cozo_c
    include-dirs: headers/
    hs-source-dirs:   src
    default-language: GHC2021
