cabal-version:      3.4
name:               cozo-hs
version:            0.1.0.0
synopsis:           Haskell bindings to the CozoDB C API
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Monawa Sensei
maintainer:         monawasensei@gmail.com
-- copyright:
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: headers/cozo_c.h

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Database.Cozo
    other-modules:
        Database.Cozo.Internal
        Database.Cozo.Internal.Bindings
    other-extensions:
        CApiFFI
        ForeignFunctionInterface
    build-depends:
        base ^>=4.18.0.0
        , aeson
        , bytestring
        , text
    extra-libraries: cozo_c
    include-dirs: headers/
    hs-source-dirs:   src
    default-language: GHC2021

test-suite cozo-hs
    import: warnings
    build-depends:
        base ^>= 4.18.0.0
        , cozo-hs
        , aeson
        , bytestring
        , tasty
        , tasty-hunit
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    default-language: GHC2021

executable example
    import: warnings
    build-depends:
        base ^>= 4.18.0.0
        ,cozo-hs
        ,bytestring
    hs-source-dirs: example
    main-is: Main.hs
    default-language: GHC2021

executable rawrepl
    import: warnings
    build-depends:
        base ^>= 4.18.0.0
        ,cozo-hs
        ,bytestring
    hs-source-dirs: rawrepl
    main-is: Main.hs
    default-language: GHC2021