cabal-version:      3.4
name:               cozo-hs
version:            0.1.0.0
synopsis:           Haskell bindings to the CozoDB C API
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Monawa Sensei
maintainer:         monawasensei@gmail.com
-- copyright:
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: headers/cozo_c.h

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Database.Cozo
    other-modules:
        Database.Cozo.Internal
        Database.Cozo.Internal.Bindings
    other-extensions:
        CApiFFI
        ForeignFunctionInterface
    build-depends:
        base ^>=4.18.0.0,
        aeson >= 2.2.1 && < 2.3,
        bytestring >= 0.11.4 && < 0.12,
        text >= 2.0.2 && < 2.1,
    extra-libraries: cozo_c
    include-dirs: headers/
    hs-source-dirs:   src
    default-language: GHC2021

test-suite cozo-hs
    import: warnings
    build-depends:
        base ^>= 4.18.0.0
        , cozo-hs
        , aeson
        , bytestring
        , tasty
        , tasty-hunit
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    default-language: GHC2021
